fixed touch event on mobile devices

--- a/css/eve-online-fitting-manager.css
+++ b/css/eve-online-fitting-manager.css
@@ -43,6 +43,8 @@
 
 	.sidebar-wrapper .sidebar-doctrine-list {
 		padding-left: 0;
+		position: relative;
+		z-index: 1;
 	}
 
 	.fitting-used-in-doctrines {
